syntax = "proto3";

package syncspirit.proto;

message Hello {
    string device_name    = 1;
    string client_name    = 2;
    string client_version = 3;
}
